--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.1", features = ["devtools", "http-all", "shell-open", "system-tray"] }
+tauri = { version = "1.1", features = ["devtools", "fs-all", "http-all", "path-all", "protocol-asset", "shell-open", "system-tray"] }
 
 [features]
 # by default Tauri runs in production mode
