--- a/next-src/.eslintrc.json
+++ b/next-src/.eslintrc.json
@@ -1,3 +1,19 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends":  [
+    "next/core-web-vitals",
+    "hardcore",
+    "hardcore/react",
+    "hardcore/react-testing-library",
+    "hardcore/jest",
+    "hardcore/fp"
+  ],
+  "overrides": [
+    {
+      "files": ["server/**/*.js"],
+      "extends": ["hardcore/node"],
+      "env": {
+        "browser": false
+      }
+    }
+  ]
 }
