--- a/next-src/package.json
+++ b/next-src/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^7.0.0",
     "@tauri-apps/api": "^1.1.0",
     "@types/node": "^18.15.10",
     "@types/react": "^18.0.30",
@@ -18,6 +19,8 @@
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
+    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
