--- a/next-src/.eslintrc.json
+++ b/next-src/.eslintrc.json
@@ -1,16 +1,26 @@
 {
-  "extends":  [
+  "extends": [
     "next/core-web-vitals",
-    "hardcore",
-    "hardcore/react",
-    "hardcore/react-testing-library",
-    "hardcore/jest",
-    "hardcore/fp"
+    "plugin:react/recommended"
+  ],
+  "rules": {
+    "react-perf/jsx-no-new-object-as-prop": 0,
+    "import/extensions": 0,
+    "fp/no-mutation": 0,
+    "prettier/prettier": 0,
+    "padding-line-between-statements":0
+  },
+  "ignorePatterns": [
+    ".next/*"
   ],
   "overrides": [
     {
-      "files": ["server/**/*.js"],
-      "extends": ["hardcore/node"],
+      "files": [
+        "server/**/*.js"
+      ],
+      "extends": [
+        "hardcore/node"
+      ],
       "env": {
         "browser": false
       }
