--- a/next-src/package.json
+++ b/next-src/package.json
@@ -17,7 +17,8 @@
     "classnames": "^2.3.2",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
-    "next": "^13.2.4",
+    "eslint-plugin-react": "^7.32.2",
+    "next": "^13.2.5-canary.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
